feat: add pagination in API responses